# esp-wifi-connect-smartconfig

./: CMakeLists.txt  sc_dns_server.cc  sc_ssid_manager.cc  sc_wifi_configuration.cc  sc_wifi_station.cc
examples/airkiss/: .gitignore  CMakeLists.txt
examples/airkiss/main/: idf_component.yml  main.cc
include/: sc_wifi_configuration.h
